# tl_new_sdk

./: CMakeLists.txt  Kconfig  gen_cmake.py  gen_kconfig.py  generate_toolchain.py
boards/: board_B80_EVK_uart.h  board_B92_EVK_uart.h  board_b80_evk.h  board_b80b_evk.h  board_b85_evk.h  board_b87_evk.h  board_b91_evk.h  board_b92_evk.h  board_tc321x_evk.h  board_tl321x_evk.h  board_tl322x_evk.h  board_tl721x_evk.h  board_tl751x_evk.h
chip/: Kconfig
chip/B80/boot/: cstartup_flash.S
chip/B80/drivers/: flash.c  flash.h  gpio_b80.c  uart_B80_hal.c
chip/B80B/drivers/: gpio_b80b.c
chip/B80B_Driver_Demo/: CMakeLists.txt
chip/B80_Driver_Demo/: CMakeLists.txt
chip/B85/boot/: cstartup_copy_ramcode.S  cstartup_flash.S  cstartup_sram.S
chip/B85/drivers/: gpio_b85.c
chip/B85_Driver_Demo/: CMakeLists.txt
chip/B87/boot/: cstartup_copy_ramcode.S  cstartup_flash.S  cstartup_sram.S
chip/B87/drivers/: gpio.h  gpio_b87.c
chip/B87/drivers/lib/include/: pm.h
chip/B87_Driver_Demo/: CMakeLists.txt
chip/B91/drivers/: gpio_b91.c
chip/B92/drivers/: gpio_b92.c
chip/TC321X/boot/: cstartup_flash.S
chip/TC321X/drivers/: clock.c  driver.h  flash.h  gpio_tc321x.c  printf.c  printf.h
chip/TC321X/drivers/flash/: flash_mid1471cd.h  flash_type.h
chip/TC321X/drivers/lib/include/pm/: pm.h
chip/TC_TC321X/: CMakeLists.txt
chip/TL321X/drivers/: gpio_tl321x.c
chip/TL721X/drivers/: gpio_tl721x.c
chip/TL_B91/: CMakeLists.txt
chip/TL_B92/: CMakeLists.txt
chip/TL_TL321X/: CMakeLists.txt
chip/TL_TL322X/: CMakeLists.txt
chip/TL_TL721X/: CMakeLists.txt
chip/TL_TL751X/: CMakeLists.txt
chip/tl322x/drivers/: gpio_tl322x.c
chip/tl751x/drivers/: gpio_tl751x.c
chip_builds/B80B_Driver_Demo/: CMakeLists.txt
chip_builds/B80_Driver_Demo/: CMakeLists.txt
chip_builds/B85_Driver_Demo/: CMakeLists.txt
chip_builds/B87_Driver_Demo/: CMakeLists.txt
chip_builds/TC_TC321X/: CMakeLists.txt
chip_builds/TL_B91/: CMakeLists.txt
chip_builds/TL_B92/: CMakeLists.txt
chip_builds/TL_TL321X/: CMakeLists.txt
chip_builds/TL_TL322X/: CMakeLists.txt
chip_builds/TL_TL721X/: CMakeLists.txt
chip_builds/TL_TL751X/: CMakeLists.txt
cmake/: kconfig.cmake  toolchain.cmake  toolchain_tc_tc321x.cmake  toolchain_tl_b91.cmake  toolchain_tl_b92.cmake  toolchain_tl_tl321x.cmake  toolchain_tl_tl322x.cmake  toolchain_tl_tl721x.cmake  toolchain_tl_tl751x.cmake
cmake_configs/: B80B_Driver_Demo_cmake.json  B80_Driver_Demo_cmake.json  B85_Driver_Demo_cmake.json  B87_Driver_Demo_cmake.json  TC_PLATFORM_SDK_321X_cmake.json  TC_PLATFORM_SDK_TC321X_cmake.json  TL_PLATFORM_SDK_321X_cmake.json  TL_PLATFORM_SDK_322X_cmake.json  TL_PLATFORM_SDK_721X_cmake.json  TL_PLATFORM_SDK_751X_cmake.json  TL_PLATFORM_SDK_B91_cmake.json  TL_PLATFORM_SDK_B92_cmake.json  TL_PLATFORM_SDK_TL321X_cmake.json  TL_PLATFORM_SDK_TL322X_cmake.json  TL_PLATFORM_SDK_TL721X_cmake.json  TL_PLATFORM_SDK_TL751X_cmake.json
demo/: Kconfig
doc/: tl_platform_sdk_Release_Note.md
doc/release_note/: tl_platform_sdk_Release_Note.md
drivers/: device.h  hal_gpio.h  hal_uart.h
project/tlsr_tc32/B80/: .project  boot.link
project/tlsr_tc32/B80B/: .cproject  .project  boot.link
project/tlsr_tc32/B85/: .project  boot.link
project/tlsr_tc32/B87/: .project  boot.link
project/tlsr_tc32/B87/link/: boot_normal.link  bootloader.link
project/tlsr_tc32/TC321X/: .cproject  .project  boot.link
tools/: Kconfig  add_driver_framework.py  add_uart_driver.py
